--- a/Kettlebel/web/index.html
+++ b/Kettlebel/web/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Kettlebell otthon</a>
+        <a class="navbar-brand"><img class="navlion" src="kepek/lion_.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,9 +37,10 @@
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="#ismerteto" class="nav-link">Mi is ez?</a></li>
-            <li class="nav-item"><a href="#vasarlas" class="nav-link">Vásárlás</a></li>
-            <li class="nav-item"><a href="#generator" class="nav-link">Gyakorlatot kérek!</a></li>
+            <li class="nav-cus"><a href="#ismerteto" class="nav-link">Rólunk</a></li>
+            <li class="nav-cus"><a href="#vasarlas" class="nav-link">Szolgáltatásaink</a></li>
+            <li class="nav-cus"><a href="#generator" class="nav-link">Kapcsolat</a></li>
+            <li class="nav-cus"><a href="#generator" class="nav-link">Fiókom</a></li>
           </ul>
         </div>
       </div>
@@ -47,7 +48,7 @@
 
     <header class="masthead text-center text-white">
       <div class="masthead-content">
-        <div class="container">
+        <div class="container2">
           <h1 class="masthead-heading mb-0">Kettlebell edzés otthon</h1>
           <h2 class="masthead-subheading mb-0">
             Teljes konditerem egyetlen súlyzóval!
@@ -66,7 +67,7 @@
     <div id="kedvcsinalo">
       <a class="anchor" id="ismerteto"></a>
       <section>
-        <div class="container">
+        <div class="2">
           <div class="row align-items-center">
             <div class="col-lg-6 order-lg-2">
               <div class="p-5">
@@ -92,7 +93,7 @@
       </section>
 
       <section>
-        <div class="container">
+        <div class="container2">
           <div class="row align-items-center">
             <div class="col-lg-6">
               <div class="p-5">
@@ -117,7 +118,7 @@
       </section>
 
       <section>
-        <div class="container">
+        <div class="container2">
           <div class="row align-items-center">
             <div class="col-lg-6 order-lg-2">
               <div class="p-5">
@@ -143,7 +144,7 @@
     <!-- Áraink -->
     <section id="arak" class="pricing p-5">
       <a class="anchor" id="vasarlas"></a>
-      <div class="container">
+      <div class="container2">
         <div class="row">
           <h2 class="mx-auto">Mennyibe kerül belevágni?</h2>
         </div>
@@ -216,7 +217,7 @@
                   edzésterv kialakítása
                 </li>
               </ul>
-              <a href="#" class="btn btn-block btn-primary text-uppercase"
+              <a href="#" class="btn btn-block btn-primary text-uppercase szabadedzo"
                 >Szabad edzők</a
               >
             </div>
@@ -261,7 +262,7 @@
 
     <section>
       <a class="anchor" id="generator"></a>
-      <div class="container p-5">
+      <div class="container2 p-5">
         <div class="card grey lighten-3 chat-room card">
           <div class="card-body column d-flex justify-content-center">
             <div class="chat-box p-3">
@@ -291,7 +292,7 @@
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
-      <div class="container">
+      <div class="container2">
         <p class="m-0 text-center text-white small">Kettlebell Gym</p>
       </div>
     </footer>
