index, szolgáltatásaink alap

--- a/Kettlebel/web/szolgaltatasaink.html
+++ b/Kettlebel/web/szolgaltatasaink.html
@@ -37,7 +37,7 @@
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-cus"><a href="#ismerteto" class="nav-link">Rólunk</a></li>
+            <li class="nav-cus"><a href="index.html" class="nav-link">Rólunk</a></li>
             <li class="nav-cus"><a href="szolgaltatasaink.html" class="nav-link">Szolgáltatásaink</a></li>
             <li class="nav-cus"><a href="#generator" class="nav-link">Kapcsolat</a></li>
             <li class="nav-cus"><a href="#generator" class="nav-link">Fiókom</a></li>
@@ -156,6 +156,124 @@
       </section>
     </div>
 
+    <!-- Áraink -->
+    <section id="arak" class="pricing p-5">
+      <a class="anchor" id="vasarlas"></a>
+      <div class="container2">
+        <div class="row">
+          <h2 class="mx-auto feher mb-5">Mennyibe kerül belevágni?</h2>
+        </div>
+        <div class="row">
+          <div class="card mb-5 col-md-4">
+            <div class="card-body">
+              <h5 class="card-title text-muted text-uppercase text-center">
+                Egyszerű fém kettlebell
+              </h5>
+              <h6 class="card-price text-center">
+                1 000 Ft<span class="period">/KG</span>
+              </h6>
+              <hr />
+              <ul class="fa-ul">
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span
+                  ><strong>Férfi kezdősúly: 16-20 kg</strong>
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span>Női
+                  kezdősúly: 8-12 kg
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span>Nem
+                  igényel karbantartást, de egy gumiszőnyeg segít vigyázni a
+                  padlóra
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span>Ha
+                  tudunk, eddzünk a szabadban!
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span>Ha
+                  tőlünk vásárol, 10% kedvezményt biztosítunk!
+                </li>
+              </ul>
+              <a href="#" class="btn btn-block btn-primary text-uppercase"
+                >Kedvezményes vásárlás</a
+              >
+            </div>
+          </div>
+          <div class="card mb-5 col-md-4">
+            <div class="card-body">
+              <h5 class="card-title text-muted text-uppercase text-center">
+                Személyre szabott edzőterv
+              </h5>
+              <h6 class="card-price text-center">
+                20 000 Ft<span class="period">/hónap</span>
+              </h6>
+              <hr />
+              <ul class="fa-ul">
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span
+                  ><strong>Professzionális videós coach-olás</strong>
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span
+                  >Személyre szabott edzésterv
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span
+                  >Segítünk a megfelelő technika elsajátításában
+                </li>
+                <li id="kedvezmenyListaElem">
+                  <span class="fa-li"><i class="fas fa-check"></i></span>50%-os
+                  kedvezmény a terem belépő árából
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span>Online
+                  edzésterv kialakítása
+                </li>
+              </ul>
+              <a href="#" class="btn btn-block btn-primary text-uppercase szabadedzo"
+                >Szabad edzők</a
+              >
+            </div>
+          </div>
+          <div class="card mb-5 col-md-4">
+            <div class="card-body">
+              <h5 class="card-title text-muted text-uppercase text-center">
+                Tankönyv
+              </h5>
+              <h6 class="card-price text-center">
+                4 999 Ft<span class="period"></span>
+              </h6>
+              <hr />
+              <ul class="fa-ul">
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span
+                  ><strong>A mester leghíresebb könyve</strong>
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span
+                  >Kifejezetten kezdők számára íródott
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span
+                  >Teljes edzéstervet tartalmaz, amely megalapozza a későbbi fejlődést
+                </li>
+                <li id="kedvezmenyListaElem">
+                  <span class="fa-li"><i class="fas fa-check"></i></span>Segít elsajátítani az alapokat
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fas fa-check"></i></span>Remek kiegészítő edzés más sporttevékenységek mellé is
+                </li>
+              </ul>
+              <a href="#" class="btn btn-block btn-primary text-uppercase"
+                >Megrendelem</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
@@ -164,7 +282,6 @@
       </div>
     </footer>
 
-    
     <!-- Bootstrap kötelező elemek sorrendben -->
     <script src="assets/jquery/jquery-3.3.1.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
