--- a/Kettlebel/web/index.html
+++ b/Kettlebel/web/index.html
@@ -39,7 +39,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-cus"><a href="#ismerteto" class="nav-link">Rólunk</a></li>
             <li class="nav-cus"><a href="szolgaltatasaink.html" class="nav-link">Szolgáltatásaink</a></li>
-            <li class="nav-cus"><a href="#generator" class="nav-link">Kapcsolat</a></li>
+            <li class="nav-cus"><a href="kapcsolat.html" class="nav-link">Kapcsolat</a></li>
             <li class="nav-cus"><a href="#generator" class="nav-link">Fiókom</a></li>
           </ul>
         </div>
