--- a/Kettlebel/web/kapcsolat.html
+++ b/Kettlebel/web/kapcsolat.html
@@ -37,7 +37,7 @@
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-cus"><a href="index.html" class="nav-link">Rólunk</a></li>
+            <li class="nav-cus"><a href="rolunk.html" class="nav-link">Rólunk</a></li>
             <li class="nav-cus"><a href="szolgaltatasaink.html" class="nav-link">Szolgáltatásaink</a></li>
             <li class="nav-cus"><a href="kapcsolat.html" class="nav-link">Kapcsolat</a></li>
             <li class="nav-cus"><a href="#generator" class="nav-link">Fiókom</a></li>
