--- a/Kettlebel/web/rolunk.html
+++ b/Kettlebel/web/rolunk.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
       <div class="container">
         <a href="index.html" class="navbar-brand"><img class="navlion" src="kepek/lion_.png" alt=""></a>
         <button
@@ -78,7 +78,18 @@
     </a>
   </div>-->
 
+<div class="keret">
+  <div class="display">A 3FG</div>
+  <p>
+    A Three For Glory egy elszánt, ambiciózus közösség. Legfőbb célunk generációnk
+    fiataljainak segítése, mind mentálisan mind fizikálisan, hogy saját maguk legjobb verzióját
+    tudják felfedezni és értéket teremtsenek a világnak. A hosszú évek óta tartó önfejlesztés során
+    rengeteg tapasztalatot és tudást szereztünk magunkról, melyek Neked is segíthetnek egy
+    sikeres és boldog élet megteremtésében. Ne feledd, minden válasz benned van! Mi segítünk,
+    hogy meg is találd őket!
+  </p>
 
+</div>
     <div id="kedvcsinalo">
       <a class="anchor" id="ismerteto"></a>
       <section>
@@ -86,20 +97,25 @@
           <div class="row align-items-center">
             <div class="col-lg-6 order-lg-2">
               <div class="p-5">
-                <img src="assets/kepek/kettlebell_in_sand.jpg" alt="" class="img-fluid rounded-circle">
+                <img src="assets/kepek/20230612_181107.jpg" alt="" class="img-fluid rounded-circle">
                 <!-- kép helye: "kettlebell_in_sand"-->
               </div>
             </div>
             <div class="col-lg-6 order-lg-1">
               <div class="p-5">
-                <h2 class="display-4">Erő, technika, fejlődés</h2>
+                <h2 class="display-4">Major Ádám</h2>
+                <div class="szerep">Alapító</div>
                 <p>
-                  A kettlebell egy egyszerű súlyzó, amivel dinamikus- és
-                  statikus gyakorlatokat lehet végezni.
+                  Major Ádám vagyok, 18 éves, jelenleg 12.-be járok a győri Krúdy Technikumban. 2019 óta
+                  foglalkozom edzéssel, nagyon komolyan pedig 2021 óta. Rengeteget tapasztaltam már a
+                  felosztásokról, gyakorlatokról, helyes mozgástartományokról.
                 </p>
                 <p>
-                  A kettlebell a tökéletes edzőtárs ahhoz, hogy állóképességünk
-                  fejlesztése közben általános erőt is növeljünk.
+                  Az önfejlesztésre pedig
+                  nagyjából 5 éve fordítok sok időt a szabadidőmben, hiszen úgy gondolom, hogy a mentális
+                  egészség és a saját potenciálunk elérése a legfontosabb egy boldog élet eléréséhez. Sok
+                  gyakorlati tapasztalattal a hátam mögött mondhatom, hogy képes vagyok olyan tanácsokkal és
+                  praktikákkal ellátni téged, melyek megváltoztatták az életem.
                 </p>
               </div>
             </div>
@@ -143,12 +159,13 @@
             </div>
             <div class="col-lg-6 order-lg-1">
               <div class="p-5">
-                <h2 class="display-4">Edzés bárhol, bármikor</h2>
+                <h2 class="display-4">Bajnok Milán</h2>
+                <div class="szerep">Social Media, programozó</div>
                 <p>
-                  Egy teljesértékű kettlebell edzéshez nincs másra szükségünk,
-                  mint két négyzetméter szabad helyre, és egy darab, megfelelő
-                  súlyú gömbsúlyzóra. No és persze megfelelő technikára is.
+                  Bajnok Milán vagyok, 16 éves, jelenleg a győri Jedlik informatikai technikumban tanuló, harmadéves diák. Kicsit több, mint egy éve foglalkozom programozással, weboldalak fejlesztésével.
                 </p>
+                <p>Szabadidőm egy nagy részét az edzések és a sport töltik ki, ilyenkor lehetőségem van kiszellőztetni a fejem, átgondolni örömeim és bánataim. Több, mint egy éve, hogy elkezdtem edzeni, nagy változást hozott az életembe mint testileg, mint szellemileg. Véleményem szerint a rendszeres edzés nemcsak fizikailag, hanem mentálisan is képes fejleszteni az embert. Tisztább gondolkodást, pozitívabb világlátást is eredményezhet.</p>
+                <p>A feladatom a vállalkozás digitális, informatikai és social media felületeinek kezelése, a kérdések megválaszolása, esetleg problémák, észrevételek felvétele. </p>
               </div>
             </div>
           </div>
