--- a/Kettlebel/web/szolgaltatasaink.html
+++ b/Kettlebel/web/szolgaltatasaink.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
       <div class="container">
         <a href="index.html" class="navbar-brand"><img class="navlion" src="kepek/lion_.png" alt=""></a>
         <button
@@ -37,7 +37,7 @@
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-cus"><a href="index.html" class="nav-link">Rólunk</a></li>
+            <li class="nav-cus"><a href="rolunk.html" class="nav-link">Rólunk</a></li>
             <li class="nav-cus"><a href="szolgaltatasaink.html" class="nav-link">Szolgáltatásaink</a></li>
             <li class="nav-cus"><a href="kapcsolat.html" class="nav-link">Kapcsolat</a></li>
             <li class="nav-cus"><a href="#generator" class="nav-link">Fiókom</a></li>
@@ -77,8 +77,6 @@
       <span class="carousel-control-next-icon"></span>
     </a>
   </div>-->
-
-
     <div id="kedvcsinalo">
       <a class="anchor" id="ismerteto"></a>
       <section>
@@ -86,20 +84,22 @@
           <div class="row align-items-center">
             <div class="col-lg-6 order-lg-2">
               <div class="p-5">
-                <img src="assets/kepek/kettlebell_in_sand.jpg" alt="" class="img-fluid rounded-circle">
+                <img src="assets/kepek/glorius_.png" alt="" class="img-fluid rounded-circle">
                 <!-- kép helye: "kettlebell_in_sand"-->
               </div>
             </div>
             <div class="col-lg-6 order-lg-1">
               <div class="p-5">
-                <h2 class="display-4">Erő, technika, fejlődés</h2>
+                <h2 class="display-4">Online kurzus</h2>
                 <p>
-                  A kettlebell egy egyszerű súlyzó, amivel dinamikus- és
-                  statikus gyakorlatokat lehet végezni.
+                  A <span class="szerep2">„Glorius”</span> nevű online kurzusunkban több videón keresztül kaphatsz betekintést az edzés,
+                  táplálkozás és pihenés triumvirátusának rejtelmeibe, melyek egészséget és egyensúlyt
+                  teremtenek az életedbe. Megmutatjuk, mik azok a képességek, amik a sikerhez vezetnek.
                 </p>
                 <p>
-                  A kettlebell a tökéletes edzőtárs ahhoz, hogy állóképességünk
-                  fejlesztése közben általános erőt is növeljünk.
+                  Megtudhatod azt is, mit csinálunk a nehéz időkben, hogy annak ellenére is küzdünk a
+                  céljainkért, hogy az élet megpróbáltatásoknak tesz ki minket. A videókat gondos szövegírás
+                  és precíz munka előzi meg, így garantáljuk, hogy értékes tartalmakat kaphatsz kézhez.
                 </p>
               </div>
             </div>
@@ -112,20 +112,24 @@
           <div class="row align-items-center">
             <div class="col-lg-6">
               <div class="p-5">
-                <img src="assets/kepek/pavel.jpg" alt="" class="img-fluid rounded-circle">
+                <img src="assets/kepek/Fejben az erő_.png" alt="" class="img-fluid rounded-circle">
                 <!-- kép helye: "pavel"-->
               </div>
             </div>
             <div class="col-lg-6">
               <div class="p-5">
-                <h2 class="display-4">Pavel Tsatsouline</h2>
+                <h2 class="display-4">Online coaching</h2>
                 <p>
-                  A gömbsúlyzóval végzett gyakorlatok hagyományos orosz
-                  edzésformának számítanak, amit már a legendás orosz cirkuszi
-                  súlyemelők és titkosalakulatok is hasznosítottak az évek
-                  során. Pavel Tsatsouline a 90'-es évek elején mutatta meg a
-                  világnak ezt az egyszerű, de nagyszerű sporteszközt.
+                  <span class="szerep2">„Fejben az erő”</span> címmel minden héten szombaton online coaching szolgáltatást is nyújtunk,
+                  ahol egy videóhívás keretében osztjuk meg az önfejlesztés útján szerzett tapasztalatainkat,
+                  rávilágítunk a gondolatok fontosságára és hasznos tippeket adunk gyakorlati példákkal
+                  alátámasztva, hogy a mentális erőddel minden akadályt képes légy ledönteni.
                 </p>
+                <p>Az interaktív
+                  beszélgetésekben megoszthatod velünk nehézségeidet vagy kérdéseidet, mi pedig megoldást
+                  biztosítunk, hogy elérd a hőn áhított céljaidat. Amint megváltoztatod a gondolataid és
+                  hozzáállásod, az élet pozitív megerősítéseket küld feléd és jelzi, hogy rátértél a helyes útra.
+                  Mi segítünk, hogy megtaláld magadban a válaszokat!</p>
               </div>
             </div>
           </div>
@@ -137,17 +141,15 @@
           <div class="row align-items-center">
             <div class="col-lg-6 order-lg-2">
               <div class="p-5">
-                <img src="assets/kepek/kettlebell_at_home.jpg" alt="" class="img-fluid rounded-circle">
+                <a href="https://discord.gg/dDQsYe3G"><img src="assets/kepek/discord_.png" title="Ugrás a Discord szerverre." class="img-fluid rounded-circle"></a>
                 <!-- kép helye: "kettlebell_at_home"-->
               </div>
             </div>
             <div class="col-lg-6 order-lg-1">
               <div class="p-5">
-                <h2 class="display-4">Edzés bárhol, bármikor</h2>
+                <h2 class="display-4">Discord szerverünk</h2>
                 <p>
-                  Egy teljesértékű kettlebell edzéshez nincs másra szükségünk,
-                  mint két négyzetméter szabad helyre, és egy darab, megfelelő
-                  súlyú gömbsúlyzóra. No és persze megfelelő technikára is.
+                  Továbbá várunk szeretettel Discord szerverünkre is, ahol közösen tudunk a fejlődés irányába tartani, beszélgetni az eddigi sikereitekről és segíteni eljutni a csúcsra. Célunk egy ambiciózus, sikerre éhes közösség kialakítása, ahol mindenki megérzi a fejlődés örömét. Ha szeretnél egy személyre szabott edzéstervet is, már nem is kell tovább keresgélned, ugyanis a szerveren ilyen szolgáltatással is várunk. Megbeszéljük a részleteket és elkészítjük Neked azt a tervet, amivel elérheted az eddigi legjobb formádat és hatalmas önbizalomra tehetsz szert. Találkozunk a „bajnokok klubjában”!
                 </p>
               </div>
             </div>
@@ -266,7 +268,7 @@
                   <span class="fa-li"><i class="fas fa-check"></i></span>Remek kiegészítő edzés más sporttevékenységek mellé is
                 </li>
               </ul>
-              <a href="#" class="btn btn-block btn-primary text-uppercase"
+              <a href="#" class="btn btn-block btn-primary text-uppercase szabadedzo"
                 >Megrendelem</a
               >
             </div>
