--- a/Kettlebel/web/kapcsolat.html
+++ b/Kettlebel/web/kapcsolat.html
@@ -22,7 +22,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img class="navlion" src="kepek/lion_.png" alt=""></a>
+        <a href="index.html" class="navbar-brand"><img class="navlion" src="kepek/3fg_.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
