--- a/Kettlebel/web/rolunk.html
+++ b/Kettlebel/web/rolunk.html
@@ -22,7 +22,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img class="navlion" src="kepek/lion_.png" alt=""></a>
+        <a href="index.html" class="navbar-brand"><img class="navlion" src="kepek/3fg_.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -104,7 +104,7 @@
             <div class="col-lg-6 order-lg-1">
               <div class="p-5">
                 <h2 class="display-4">Major Ádám</h2>
-                <div class="szerep">Alapító</div>
+                <div class="szerep">Alapító, Coach</div>
                 <p>
                   Major Ádám vagyok, 18 éves, jelenleg 12.-be járok a győri Krúdy Technikumban. 2019 óta
                   foglalkozom edzéssel, nagyon komolyan pedig 2021 óta. Rengeteget tapasztaltam már a
@@ -134,7 +134,8 @@
             </div>
             <div class="col-lg-6">
               <div class="p-5">
-                <h2 class="display-4">Pavel Tsatsouline</h2>
+                <h2 class="display-4">Pleszkács Áron</h2>
+                <div class="szerep">Coach</div>
                 <p>
                   A gömbsúlyzóval végzett gyakorlatok hagyományos orosz
                   edzésformának számítanak, amit már a legendás orosz cirkuszi
@@ -160,7 +161,7 @@
             <div class="col-lg-6 order-lg-1">
               <div class="p-5">
                 <h2 class="display-4">Bajnok Milán</h2>
-                <div class="szerep">Social Media, programozó</div>
+                <div class="szerep">Social Media, Programozó</div>
                 <p>
                   Bajnok Milán vagyok, 16 éves, jelenleg a győri Jedlik informatikai technikumban tanuló, harmadéves diák. Kicsit több, mint egy éve foglalkozom programozással, weboldalak fejlesztésével.
                 </p>
