--- a/Kettlebel/web/index.html
+++ b/Kettlebel/web/index.html
@@ -45,16 +45,14 @@
         </div>
       </div>
     </nav>
-    <!--
+    
   <div id="slider" class="container carousel slide" data-ride="carousel">
-    <!-- Indicators
     <ul class="carousel-indicators">
       <li data-target="#slider" data-slide-to="0" class="active"></li>
       <li data-target="#slider" data-slide-to="1"></li>
       <li data-target="#slider" data-slide-to="2"></li>
       <li data-target="#slider" data-slide-to="3"></li>
     </ul>
-    <!-- The slideshow
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="kepek/2.jpg" alt="MAN NGE152" title="MAN NGE152">
@@ -69,14 +67,13 @@
         <img src="kepek/3.jpg" alt="Ikarus 280T" title="Ikarus 280T">
       </div>
     </div>
-    <!-- Left and right controls
     <a class="carousel-control-prev" href="#slider" data-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </a>
     <a class="carousel-control-next" href="#slider" data-slide="next">
       <span class="carousel-control-next-icon"></span>
     </a>
-  </div>-->
+  </div>
     <div id="kedvcsinalo">
       <a class="anchor" id="ismerteto"></a>
       <section>
