--- a/Kettlebel/web/index.html
+++ b/Kettlebel/web/index.html
@@ -47,32 +47,20 @@
     </nav>
     
   <div id="slider" class="container carousel slide" data-ride="carousel">
-    <ul class="carousel-indicators">
-      <li data-target="#slider" data-slide-to="0" class="active"></li>
-      <li data-target="#slider" data-slide-to="1"></li>
-      <li data-target="#slider" data-slide-to="2"></li>
-      <li data-target="#slider" data-slide-to="3"></li>
-    </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="kepek/2.jpg" alt="MAN NGE152" title="MAN NGE152">
+        <img src="kepek/Fejben az erő.jpg" alt="" title="">
       </div>
       <div class="carousel-item">
-        <img src="kepek/3.jpg" alt="Ikarus 411T" title="Ikarus 411T">
+        <img src="kepek/Fejben az erő.jpg" alt="" title="">
       </div>
       <div class="carousel-item">
-        <img src="kepek/3.jpg" alt="Solaris Trollino 18 III" title="Solaris Trollino 18 III">
+        <img src="kepek/Fejben az erő.jpg" alt="" title="">
       </div>
       <div class="carousel-item">
-        <img src="kepek/3.jpg" alt="Ikarus 280T" title="Ikarus 280T">
+        <img src="" alt="" title="">
       </div>
     </div>
-    <a class="carousel-control-prev" href="#slider" data-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#slider" data-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </a>
   </div>
     <div id="kedvcsinalo">
       <a class="anchor" id="ismerteto"></a>
