--- a/Kettlebel/web/szolgaltatasaink.html
+++ b/Kettlebel/web/szolgaltatasaink.html
@@ -45,38 +45,6 @@
         </div>
       </div>
     </nav>
-    <!--
-  <div id="slider" class="container carousel slide" data-ride="carousel">
-    <!-- Indicators
-    <ul class="carousel-indicators">
-      <li data-target="#slider" data-slide-to="0" class="active"></li>
-      <li data-target="#slider" data-slide-to="1"></li>
-      <li data-target="#slider" data-slide-to="2"></li>
-      <li data-target="#slider" data-slide-to="3"></li>
-    </ul>
-    <!-- The slideshow
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="kepek/2.jpg" alt="MAN NGE152" title="MAN NGE152">
-      </div>
-      <div class="carousel-item">
-        <img src="kepek/3.jpg" alt="Ikarus 411T" title="Ikarus 411T">
-      </div>
-      <div class="carousel-item">
-        <img src="kepek/3.jpg" alt="Solaris Trollino 18 III" title="Solaris Trollino 18 III">
-      </div>
-      <div class="carousel-item">
-        <img src="kepek/3.jpg" alt="Ikarus 280T" title="Ikarus 280T">
-      </div>
-    </div>
-    <!-- Left and right controls
-    <a class="carousel-control-prev" href="#slider" data-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#slider" data-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </a>
-  </div>-->
     <div id="kedvcsinalo">
       <a class="anchor" id="ismerteto"></a>
       <section>
@@ -141,7 +109,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6 order-lg-2">
               <div class="p-5">
-                <a href="https://discord.gg/dDQsYe3G"><img src="assets/kepek/discord_.png" title="Ugrás a Discord szerverre." class="img-fluid rounded-circle"></a>
+                <a href="https://discord.gg/dDQsYe3G"><img src="assets/kepek/discord_.png" title="Ugrás a Discord szerverre." class="img-fluid rounded-circle dckep"></a>
                 <!-- kép helye: "kettlebell_at_home"-->
               </div>
             </div>
