Kezdőlapi szolgáltatás kártyák

--- a/Kettlebel/web/index.html
+++ b/Kettlebel/web/index.html
@@ -91,177 +91,46 @@
           </div>
         </div>
       </section>
-
-      <section>
-        <div class="container2">
-          <div class="row align-items-center">
-            <div class="col-lg-6">
-              <div class="p-5">
-                <img src="assets/kepek/Fejben az erő_.png" alt="" class="img-fluid rounded-circle">
-                <!-- kép helye: "pavel"-->
-              </div>
+      <div class="kártya">
+        <main class="contcard">
+          <section class="card2">
+            <div class="product-image">
+              <img src="kepek/laptop_.png" alt="OFF-white Red Edition" draggable="false" class="cardpic" />
             </div>
-            <div class="col-lg-6">
-              <div class="p-5">
-                <h2 class="display-4">Online coaching</h2>
-                <p>
-                  <span class="szerep2">„Fejben az erő”</span> címmel minden héten szombaton online coaching szolgáltatást is nyújtunk,
-                  ahol egy videóhívás keretében osztjuk meg az önfejlesztés útján szerzett tapasztalatainkat,
-                  rávilágítunk a gondolatok fontosságára és hasznos tippeket adunk gyakorlati példákkal
-                  alátámasztva, hogy a mentális erőddel minden akadályt képes légy ledönteni.
-                </p>
-                <p>Az interaktív
-                  beszélgetésekben megoszthatod velünk nehézségeidet vagy kérdéseidet, mi pedig megoldást
-                  biztosítunk, hogy elérd a hőn áhított céljaidat. Amint megváltoztatod a gondolataid és
-                  hozzáállásod, az élet pozitív megerősítéseket küld feléd és jelzi, hogy rátértél a helyes útra.
-                  Mi segítünk, hogy megtaláld magadban a válaszokat!</p>
-              </div>
+            <div class="product-info">
+              <h2>Online Kurzus</h2>
+              <p>A Glorius kurzusunkban több videón keresztül kaphatsz betekintést az edzés, táplálkozás és pihenés triumvirátusának rejtelmeibe.</p>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="container2">
-          <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
-              <div class="p-5">
-                <a href="https://discord.gg/dDQsYe3G"><img src="assets/kepek/discord_.png" title="Ugrás a Discord szerverre." class="img-fluid rounded-circle"></a>
-                <!-- kép helye: "kettlebell_at_home"-->
-              </div>
+            <div class="btn">
+              <a href="szolgaltatasaink.html#szolg"><button class="buy-btn">MEGNÉZEM</button></a>
             </div>
-            <div class="col-lg-6 order-lg-1">
-              <div class="p-5">
-                <h2 class="display-4">Discord szerverünk</h2>
-                <p>
-                  Továbbá várunk szeretettel Discord szerverünkre is, ahol közösen tudunk a fejlődés irányába tartani, beszélgetni az eddigi sikereitekről és segíteni eljutni a csúcsra. Célunk egy ambiciózus, sikerre éhes közösség kialakítása, ahol mindenki megérzi a fejlődés örömét. Ha szeretnél egy személyre szabott edzéstervet is, már nem is kell tovább keresgélned, ugyanis a szerveren ilyen szolgáltatással is várunk. Megbeszéljük a részleteket és elkészítjük Neked azt a tervet, amivel elérheted az eddigi legjobb formádat és hatalmas önbizalomra tehetsz szert. Találkozunk a „bajnokok klubjában”!
-                </p>
-              </div>
+          </section>
+          <section class="card2 card-blue">
+            <div class="product-image">
+              <img src="kepek/telefon_.png" alt="OFF-white Blue Edition" draggable="false" class="cardpic2"/>
             </div>
-          </div>
-        </div>
-      </section>
-    </div>
-
-    <!-- Áraink -->
-    <section id="arak" class="pricing p-5">
-      <a class="anchor" id="vasarlas"></a>
-      <div class="container2">
-        <div class="row">
-          <h2 class="mx-auto feher mb-5">Mennyibe kerül belevágni?</h2>
-        </div>
-        <div class="row">
-          <div class="card mb-5 col-md-4">
-            <div class="card-body">
-              <h5 class="card-title text-muted text-uppercase text-center">
-                Egyszerű fém kettlebell
-              </h5>
-              <h6 class="card-price text-center">
-                1 000 Ft<span class="period">/KG</span>
-              </h6>
-              <hr />
-              <ul class="fa-ul">
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span
-                  ><strong>Férfi kezdősúly: 16-20 kg</strong>
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>Női
-                  kezdősúly: 8-12 kg
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>Nem
-                  igényel karbantartást, de egy gumiszőnyeg segít vigyázni a
-                  padlóra
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>Ha
-                  tudunk, eddzünk a szabadban!
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>Ha
-                  tőlünk vásárol, 10% kedvezményt biztosítunk!
-                </li>
-              </ul>
-              <a href="#" class="btn btn-block btn-primary text-uppercase"
-                >Kedvezményes vásárlás</a
-              >
+            <div class="product-info">
+              <h2>Online Coaching</h2>
+              <p>„Fejben az erő” címmel minden héten szombaton online coaching szolgáltatást is nyújtunk</p>
             </div>
-          </div>
-          <div class="card mb-5 col-md-4">
-            <div class="card-body">
-              <h5 class="card-title text-muted text-uppercase text-center">
-                Személyre szabott edzőterv
-              </h5>
-              <h6 class="card-price text-center">
-                20 000 Ft<span class="period">/hónap</span>
-              </h6>
-              <hr />
-              <ul class="fa-ul">
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span
-                  ><strong>Professzionális videós coach-olás</strong>
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span
-                  >Személyre szabott edzésterv
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span
-                  >Segítünk a megfelelő technika elsajátításában
-                </li>
-                <li id="kedvezmenyListaElem">
-                  <span class="fa-li"><i class="fas fa-check"></i></span>50%-os
-                  kedvezmény a terem belépő árából
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>Online
-                  edzésterv kialakítása
-                </li>
-              </ul>
-              <a href="#" class="btn btn-block btn-primary text-uppercase szabadedzo"
-                >Szabad edzők</a
-              >
+            <div class="btn">
+              <a href="szolgaltatasaink.html#coach"><button class="buy-btn">MEGNÉZEM</button></a>
             </div>
-          </div>
-          <div class="card mb-5 col-md-4">
-            <div class="card-body">
-              <h5 class="card-title text-muted text-uppercase text-center">
-                Tankönyv
-              </h5>
-              <h6 class="card-price text-center">
-                4 999 Ft<span class="period"></span>
-              </h6>
-              <hr />
-              <ul class="fa-ul">
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span
-                  ><strong>A mester leghíresebb könyve</strong>
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span
-                  >Kifejezetten kezdők számára íródott
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span
-                  >Teljes edzéstervet tartalmaz, amely megalapozza a későbbi fejlődést
-                </li>
-                <li id="kedvezmenyListaElem">
-                  <span class="fa-li"><i class="fas fa-check"></i></span>Segít elsajátítani az alapokat
-                </li>
-                <li>
-                  <span class="fa-li"><i class="fas fa-check"></i></span>Remek kiegészítő edzés más sporttevékenységek mellé is
-                </li>
-              </ul>
-              <a href="#" class="btn btn-block btn-primary text-uppercase szabadedzo"
-                >Megrendelem</a
-              >
+          </section>
+          <section class="card2 card-blue">
+            <div class="product-image">
+              <img src="kepek/súlyzó_.png" alt="OFF-white Blue Edition" draggable="false" class="cardpic"/>
             </div>
-          </div>
-        </div>
+            <div class="product-info">
+              <h2>Edzéstervek</h2>
+              <p>Ha szeretnél egy személyre szabott edzéstervet is, a Discord szerverünkön ilyen szolgáltatással is várunk.</p>
+            </div>
+            <div class="btn">
+              <a href="szolgaltatasaink.html#dc"><button class="buy-btn">MEGNÉZEM</button></a>
+            </div>
+          </section>
+        </main>
       </div>
-    </section>
-
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container2">
