--- a/Kettlebel/web/index.html
+++ b/Kettlebel/web/index.html
@@ -90,7 +90,7 @@
             <img src="kepek/laptop_.png" alt="OFF-white Red Edition" draggable="false" class="cardpic" />
           </div>
           <div class="product-info">
-            <h2>Online Kurzus</h2>
+            <h3>Online Kurzus</h3>
             <p>A Glorius kurzusunkban több videón keresztül kaphatsz betekintést az edzés, táplálkozás és pihenés
               triumvirátusának rejtelmeibe.</p>
           </div>
@@ -103,7 +103,7 @@
             <img src="kepek/telefon_.png" alt="OFF-white Blue Edition" draggable="false" class="cardpic2" />
           </div>
           <div class="product-info">
-            <h2>Online Coaching</h2>
+            <h3>Online Coaching</h3>
             <p>„Fejben az erő” címmel minden héten szombaton online coaching szolgáltatást is nyújtunk</p>
           </div>
           <div class="btn">
@@ -115,7 +115,7 @@
             <img src="kepek/súlyzó_.png" alt="OFF-white Blue Edition" draggable="false" class="cardpic" />
           </div>
           <div class="product-info">
-            <h2>Edzéstervek</h2>
+            <h3>Edzéstervek</h3>
             <p>Ha szeretnél egy személyre szabott edzéstervet is, a Discord szerverünkön ilyen szolgáltatással is
               várunk.</p>
           </div>
@@ -125,6 +125,45 @@
         </section>
       </main>
     </div>
+    
+  <!--  <div class="containerc">
+      <div class="cardc cardc0">
+        <div class="borderc">
+          <h2>Al Pacino</h2>
+          <div class="iconsc">
+            <i class="fac fac-codepen" aria-hidden="true"></i>
+            <i class="fac fac-instagram" aria-hidden="true"></i>
+            <i class="fac fac-dribbble" aria-hidden="true"></i>
+            <i class="fac fac-twitter" aria-hidden="true"></i>
+            <i class="fac fac-facebook" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+      <div class="cardc cardc1">
+        <div class="borderc">
+          <h2>Ben Stiller</h2>
+          <div class="iconsc">
+            <i class="fac fac-codepen" aria-hidden="true"></i>
+            <i class="fac fac-instagram" aria-hidden="true"></i>
+            <i class="fac fac-dribbble" aria-hidden="true"></i>
+            <i class="fac fac-twitter" aria-hidden="true"></i>
+            <i class="fac fac-facebook" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+      <div class="cardc cardc2">
+        <div class="borderc">
+          <h2>Patrick Stewart</h2>
+          <div class="iconsc">
+            <i class="fac fac-codepen" aria-hidden="true"></i>
+            <i class="fac fac-instagram" aria-hidden="true"></i>
+            <i class="fac fac-dribbble" aria-hidden="true"></i>
+            <i class="fac fac-twitter" aria-hidden="true"></i>
+            <i class="fac fac-facebook" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+    </div>  -->
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
@@ -160,7 +199,6 @@
         </a>
 
       </div>
-
 
       <!-- <div class="container2">
         <p class="m-0 text-center text-white small text-uppercase container2">Three For Glory - Minden válasz benned
