rolunk card kezdet

--- a/Kettlebel/web/szolgaltatasaink.html
+++ b/Kettlebel/web/szolgaltatasaink.html
@@ -36,6 +36,69 @@
       </div>
     </div>
   </nav>
+
+  <a href="rolunk.html">
+    <div class="containerc">
+      <div class="cardc card0c">
+        <div class="borderc">
+          <h2>Al Pacino</h2>
+          <div class="iconsc">
+            <i class="fac fac-codepen" aria-hidden="true"></i>
+            <i class="fac fac-instagram" aria-hidden="true"></i>
+            <i class="fac fac-dribbble" aria-hidden="true"></i>
+            <i class="fac fac-twitter" aria-hidden="true"></i>
+            <i class="fac fac-facebook" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+  </a>
+    <div class="cardc card1c">
+      <div class="borderc">
+        <h2>Ben Stiller</h2>
+        <div class="iconscc">
+          <i class="fac fac-codepen" aria-hidden="true"></i>
+          <i class="fac fac-instagram" aria-hidden="true"></i>
+          <i class="fac fac-dribbble" aria-hidden="true"></i>
+          <i class="fac fac-twitter" aria-hidden="true"></i>
+          <i class="fac fac-facebook" aria-hidden="true"></i>
+        </div>
+      </div>
+    </div>
+    <div class="cardc card2c">
+      <div class="borderc">
+        <h2>Patrick Stewart</h2>
+        <div class="iconsc">
+          <i class="fa fa-codepen" aria-hidden="true"></i>
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+          <i class="fa fa-dribbble" aria-hidden="true"></i>
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div id="kedvcsinalo">
     <a class="anchor" id="ismerteto"></a>
     <section>
